tests/snapshots/test_runner__tests__compiler__typecheck__cps_sugar_1__bang_dont_escape_function.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let x: Int = 123

entry
  let f = ~ x -> () [
    "Hello" .print !
  ];
  ()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/cps_sugar_1/bang_dont_escape_function.kk:5:20
  │
5 │     "Hello" .print !
  │                    ^ Missing Tilde Closure
  │
  = Bang can only be used in a tilde closure, for example ~unwrap (banana ! + (apple !))
